fix: mention wrap

--- a/src/editor/style/mediaNode.scss
+++ b/src/editor/style/mediaNode.scss
@@ -2,6 +2,7 @@
   span.editor-media {
     cursor: default;
     position: relative;
+    display: inline-block;
 
     audio {
       width: 300px;
