--- a/src/editor/style/mentionNode.scss
+++ b/src/editor/style/mentionNode.scss
@@ -8,6 +8,7 @@
     border-radius: 6px;
     font-weight: 500;
     margin: 0 2px;
+    display: inline-block;
   }
 }
 
